fixes background on mobile

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -10,6 +10,10 @@
 }
 
 body {
+    margin: 0;
+}
+
+.bodySection {
     background-image: url(../images/background.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -20,6 +24,7 @@ body {
     flex-direction: row;
     margin: 0;
     height: 100%;
+    width: 100%;
 }
 
 h1,
